# hpddm

./: CMakeLists.txt  Makefile  README.md
benchmark/: CMakeLists.txt
cmake/: hpddm.install.cmake  hpddm.macros.cmake  hpddm.tests.cmake
cmake/modules/: FindARPACK.cmake  FindMUMPS.cmake
examples/: CMakeLists.txt
interface/: CMakeLists.txt
testsuite/: CMakeLists.txt  header.sh  schwarzFromFile.sh  schwarz_cpp_custom_op.sh
